# ros2cal-cli

./: .gitignore  CASE_STUDY.md  README.md  pyproject.toml
ros2cal-cli/: jpg2json.py  json2ics.py
src/ros2cal/: __init__.py  cli.py  ics.py  ocr.py  prompts.py
tests/data/: roster_20251213_cdm.json
